--- a/char_sheet/html/attributes_block.html
+++ b/char_sheet/html/attributes_block.html
@@ -26,3 +26,25 @@
     <input type="text" name="attr_{{attr}}_min" value="0" hidden="true" />
     {% endfor %}
 </table>
+<table>
+    <tr class="table_header_details">
+        <td></td>
+        <td>Total</td>
+    </tr>
+    <tr>
+        <td class="skill_name">Speed: </td>
+        <td><input class="skinny_number" type="number" name="attr_speed_total" value="0" /></td>
+        <td>Feet</td>
+    </tr>
+</table>
+
+<table>
+    <tr class="table_header_details">
+        <td></td>
+        <td>Total</td>
+    </tr>
+    <tr>
+        <td class="skill_name">Hero Points: </td>
+        <td><input class="skinny_number" type="number" name="attr_hero_points_total" value="0" /></td>
+    </tr>
+</table>
