--- a/char_sheet/html/tab_main_tab.html
+++ b/char_sheet/html/tab_main_tab.html
@@ -1,4 +1,4 @@
-<div class="sheet-tab-content sheet-tab1">
+<div class="sheet-tab-content sheet-tab-main">
     <div class='sheet-2colrow'>
         <div class='sheet-col'>
 
