--- a/char_sheet/html/tab_main_tab.html
+++ b/char_sheet/html/tab_main_tab.html
@@ -10,12 +10,8 @@
             <div>
                 <h1>Defenses</h1>
             </div>
-            <table>
-                <tr>
-                    <td>{{ hp_block|safe }}</td>
-                    <td>{{ stam_block|safe }}</td>
-                </tr>
-            </table>
+            {{ hp_block|safe }}
+
             {{ armor_block|safe }}
         </div>
 
