--- a/char_sheet/html/sheet.html
+++ b/char_sheet/html/sheet.html
@@ -1,8 +1,8 @@
 {{ char_info|safe }}
 
 <input type="radio" name="attr_tab" class="sheet-tab sheet-tab-main" value="1" checked="checked"><span title="Character"></span>
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab-feats" value="2"><span title="Feats / Powers"></span>
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab-powers" value="3"><span title="Spells"></span>
+<input type="radio" name="attr_tab" class="sheet-tab sheet-tab-feats" value="2"><span title="Feats"></span>
+<input type="radio" name="attr_tab" class="sheet-tab sheet-tab-powers" value="3"><span title="Spells / Powers"></span>
 <input type="radio" name="attr_tab" class="sheet-tab sheet-tab-equipment" value="4"><span title="Equipment"></span>
 <input type="radio" name="attr_tab" class="sheet-tab sheet-tab-char-config" value="5"><span title="Character Config"></span>
 
