--- a/char_sheet/html/tab_equipment_tab.html
+++ b/char_sheet/html/tab_equipment_tab.html
@@ -36,8 +36,8 @@
         <div class='sheet-col'>
             <h1>Inventory</h1>
             <fieldset class="inventory">
-                <input type="checkbox" class="sheet-block-switch">
-                <table>
+
+                <table class="inventory_table">
                     <tr class="table_header_details">
                         <td></td>
                         <td>Quantity</td>
@@ -48,8 +48,8 @@
                         <td><input class="skinny_number" type="number" name="attr_inventory_qty" value="1" /></td>
                         <td><input class="skinny_number" type="text" name="attr_inventory_bulk" value="0" /></td>
                     </tr>
-
                 </table>
+                <input type="checkbox" class="sheet-block-switch config_checkbox spell_config_checkbox"> <span class="config_checkbox_icon spell_config_checkbox">y</span>
 
                 <div class="sheet-block-b">
                     <textarea name="attr_inventory_description"></textarea>
